bootstrap: Add architecture tags to all packages
Doing this is necessary for site_architectures to be computed
correctly, since packages without it default to x86_64, which leads to
noarch packages being installed for x86_64 instead of aarch64.

--- a/bootstrap.d/dev-lang.yml
+++ b/bootstrap.d/dev-lang.yml
@@ -162,6 +162,7 @@ tools:
 
 packages:
   - name: lua
+    architecture: '@OPTION:arch@'
     metadata:
       summary: Lua is a scripting language.
       description: Lua is a powerful, efficient, lightweight, embeddable scripting language.
