--- a/bootstrap.d/dev-util.yml
+++ b/bootstrap.d/dev-util.yml
@@ -62,6 +62,7 @@ tools:
       - args: ['make', 'install']
 
   - name: host-ninja
+    architecture: noarch
     from_source: ninja
     configure:
       - args:
