--- a/bootstrap.d/app-misc.yml
+++ b/bootstrap.d/app-misc.yml
@@ -131,6 +131,7 @@ packages:
       - args: ['cp', '-f', '@THIS_SOURCE_DIR@/pci.ids', '@THIS_COLLECT_DIR@/usr/share/hwdata/pci.ids']
 
   - name: tmux
+    architecture: '@OPTION:arch@'
     metadata:
       summary: 'terminal multiplexer'
       description: 'tmux is a terminal multiplexer. It lets you switch easily between several programs in one terminal, detach them (they keep running in the background) and reattach them to a different terminal.'
