--- a/bootstrap.d/dev-libs.yml
+++ b/bootstrap.d/dev-libs.yml
@@ -497,6 +497,7 @@ packages:
         quiet: true
 
   - name: gobject-introspection
+    architecture: '@OPTION:arch@'
     from_source: gobject-introspection
     tools_required:
       - system-gcc
