bootstrap: Add aarch64 labels for packages in weston-desktop metapkg

--- a/bootstrap.d/app-arch.yml
+++ b/bootstrap.d/app-arch.yml
@@ -193,6 +193,7 @@ packages:
         quiet: true
 
   - name: lz4
+    labels: [aarch64]
     architecture: '@OPTION:arch@'
     metadata:
       summary: Extremely Fast Compression algorithm
