--- a/bootstrap.d/sys-boot.yml
+++ b/bootstrap.d/sys-boot.yml
@@ -21,6 +21,7 @@ sources:
 tools:
   - name: host-limine
     architecture: '@OPTION:arch@'
+    labels: [aarch64]
     from_source: limine
     containerless: true
     configure:
@@ -43,6 +44,7 @@ tools:
 packages:
   - name: limine
     architecture: '@OPTION:arch@'
+    labels: [aarch64]
     from_source: limine
     tools_required:
       - system-gcc
