--- a/bootstrap.d/app-accessibility.yml
+++ b/bootstrap.d/app-accessibility.yml
@@ -11,15 +11,12 @@ packages:
       - system-gcc
       - virtual: pkgconfig-for-target
         triple: '@OPTION:arch-triple@'
-      - host-mlibc
-      - host-gobject-introspection
       - host-python
       - host-glib
     pkgs_required:
       - mlibc
       - dbus
       - glib
-      - gobject-introspection
       - libxml
       - libxtst
       - libxi
@@ -33,7 +30,7 @@ packages:
           - '--prefix=/usr'
           - '--sysconfdir=/etc'
           - '-Dsystemd_user_dir=/tmp'
-          - '-Dintrospection=enabled'
+          - '-Dintrospection=disabled'
           - '@THIS_SOURCE_DIR@'
         environ:
           # Same as below
