--- a/bootstrap.d/gui-libs.yml
+++ b/bootstrap.d/gui-libs.yml
@@ -19,8 +19,6 @@ packages:
       - wayland-scanner
       - virtual: pkgconfig-for-target
         triple: "@OPTION:arch-triple@"
-      - host-mlibc
-      - host-gobject-introspection
       - host-python
       - host-glib
     pkgs_required:
@@ -50,7 +48,6 @@ packages:
       - libxfixes
       - fontconfig
       - libxinerama
-      - gobject-introspection
       - gst-plugins-good
     revision: 1
     configure:
@@ -62,7 +59,7 @@ packages:
         - '--prefix=/usr'
         - '--buildtype=release'
         - '--wrap-mode=nodownload'
-        - '-Dintrospection=enabled'
+        - '-Dintrospection=disabled'
         - '-Dbroadway-backend=true'
         - '-Dwayland-backend=true'
         - '-Dx11-backend=true'
@@ -135,8 +132,6 @@ packages:
       - virtual: pkgconfig-for-target
         triple: "@OPTION:arch-triple@"
       - host-vala
-      - host-mlibc
-      - host-gobject-introspection
       - host-python
     pkgs_required:
       - mlibc
@@ -147,7 +142,6 @@ packages:
       - fontconfig
       - pango
       - pcre2
-      - gobject-introspection
     revision: 1
     configure:
       - args:
@@ -159,7 +153,7 @@ packages:
         - '--buildtype=release'
         - '--wrap-mode=nodownload'
         - '-Dinstall_tests=false'
-        - '-Dintrospection=enabled'
+        - '-Dintrospection=disabled'
         - '-Dvapi=true'
         - '-Dgtk_doc=false'
         - '-Dsysprof=false'
@@ -219,8 +213,6 @@ packages:
       - virtual: pkgconfig-for-target
         triple: "@OPTION:arch-triple@"
       - host-vala
-      - host-mlibc
-      - host-gobject-introspection
       - host-python
     pkgs_required:
       - mlibc
@@ -228,7 +220,6 @@ packages:
       - gtk4
       - appstream
       - fribidi
-      - gobject-introspection
     revision: 1
     configure:
       - args:
@@ -242,7 +233,7 @@ packages:
         - '--buildtype=release'
         - '--wrap-mode=nodownload'
         - '-Dprofiling=false'
-        - '-Dintrospection=enabled'
+        - '-Dintrospection=disabled'
         - '-Dvapi=true'
         - '-Dgtk_doc=false'
         - '-Dtests=false'
